# Trabalho-1

./: .gitignore  APRESENTACAO.md  CMakeLists.txt  Relatorio_Tecnico.md
include/: File.hpp  Folder.hpp  IPCModule.hpp  StorageNode.hpp  User.hpp  Utils.hpp  Workspace.hpp
src/: Client.cpp  File.cpp  Folder.cpp  IPCModule.cpp  Server.cpp  StorageNode.cpp  User.cpp  Utils.cpp  Workspace.cpp
